About 90% done with  it. I just need to fix some vertical spacing issues, get some borders/text colors to match, and make it mobile friendly. On the code side, I'd like to refactor/rethink my usage of classes and fix that up.

--- a/css/style.css
+++ b/css/style.css
@@ -31,10 +31,11 @@ input::placeholder {
 a.orangeBtn {
     color: #FFF;
     font-size: 18px;
-    font-weight: 400;
+    font-weight: 600;
     padding: 5px 20px;
     border-radius: 3px;
     background-color: #e87530;
+    display: inline-block;
 }
 
 a.greenBtn {
@@ -43,12 +44,14 @@ a.greenBtn {
     padding: 5px 20px;
     border-radius: 3px;
     background-color: #0f331f;
+    display: inline-block;
 }
 
 /* hero Section */
 .hero {
-    background-image: url('http://via.placeholder.com/1400x650');
-    background: no-repeat cover;
+    background-image: url('/img/jaciel-melnik-399287.jpg');
+    background-size: cover;
+    background-position: center;
     width: 100%;
     height: 650px;
 }
@@ -106,29 +109,36 @@ nav input {
 section.information {
     padding: 100px 0;
     display: flex;
-    justify-content: center;
 }
 
 .mainInfo{
-    width: 40%;
-    text-align: center;
     margin-right: 20px;
+    flex-basis: 50%;
 }
 
 .mainInfo h2 {
     font-family: 'Berkshire Swash', cursive;
     color: #0f331f;
-    font-size: 40px;
+    font-size: 60px;
+    margin-bottom: 25px;
 }
 
 .mainInfo p {
-    padding: 15px 0;
+    font-size: 24px;
+    padding: 20px 0;
+}
+
+.mainInfo a.orangeBtn {
+    padding: 15px 40px;
+    border-radius: 8px;
+    font-size: 24px;
+    margin-top: 60px;
 }
 
 .whereToFind {
-    width: 40%;
+    flex-basis: 50%;
     border: 1px solid #b3b3b3;
-    padding: 15px;
+    padding: 20px;
 }
 
 .whereToFind h3{
@@ -139,6 +149,7 @@ section.information {
 }
 
 .storeInfo {
+    padding: 30px 0;
     display: flex;
     justify-content: space-between;
 }
@@ -148,7 +159,13 @@ section.information {
 }
 
 /* photoLinks Section */
+
 .photoLinks {
+    background-color: #e0e1ec;
+    padding: 100px 0;
+}
+
+.photoLinks .container {
     display: flex;
     justify-content: space-between;
 }
@@ -156,31 +173,46 @@ section.information {
     margin: 5px;
 }
 
+.links img {
+    max-width: 420px;
+}
+
 .links h4 {
     text-align: center;
     height: 65px;
     padding: 15px;
     font-size: 24px;
-    position: relative;
     color: #FFF;
     background-color: #0f331f;
-    bottom: 65px;
+    margin-top: -5px;
 }
 
 /*More Info Section */
 .borderInfo {
     width: 50%;
-    margin: 20px auto 60px auto;
+    margin: 20px auto 100px auto;
     padding: 15px;
     border: 1px solid #b3b3b3;
     text-align: center;
 }
 
+.borderInfo h3 {
+    font-size: 36px;
+}
+
 .borderInfo p{
+    font-size: 24px;
     margin: 20px 0;
 }
 
+.borderInfo a.greenBtn {
+    font-size: 24px;
+    padding: 15px 40px;
+    border-radius: 8px;
+}
+
 section.moreInfo {
+    padding-top: 100px;
     width: 100%;
 }
 
@@ -206,7 +238,16 @@ footer {
 }
 
 footer ul {
+    padding-top: 20px;
+    font-size: 20px;
     display: flex;
+}
+
+footer .text {
+    color: #000;
+    font-size: 16px;
+    font-weight: 600;
+    padding: 20px 0;
 }
 
 .footerLinks {
@@ -218,5 +259,6 @@ footer ul {
 }
 
 .socialMedia li {
+    color: #000;
     padding: 15px;
 }
